--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -11,7 +11,7 @@
 @misc{weierstrass,
 author      = {Matt Young},
 title       = {The Stone-Weierstrass theorem},
-month       = {winter term},
+month       = {January},
 year        = {2006},
 publisher   = {Queen's University at Kingston}
 }
