--- a/main.tex
+++ b/main.tex
@@ -24,22 +24,24 @@
 
 \maketitle
 
+\newpage
+
 \tableofcontents
 
 \newpage
 
-%% \input{weierstrass}
-%% \input{hilbert}
-%% \input{hahn-banach}
-\input{riez}
-%% \input{aproximacao-universal}
+\input{weierstrass}
+\input{hilbert}
+\input{hahn-banach}
+\input{riesz}
+\input{aproximacao-universal}
 
-%% \printbibliography
+\printbibliography
 
-%% \newpage
-%% 
-%% \appendix
-%% \input{espacos-metricos}
-%% \input{analise-funcional}
+\newpage
+
+\appendix
+\input{espacos-metricos}
+\input{analise-funcional}
 
 \end{document}
