--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 \theoremstyle{plain}% default
 \newtheorem{teo}{Teorema}[section]
-\newtheorem{lem}{Lema}
+\newtheorem{lem}{Lema}[section]
 \newtheorem{prop}{Proposição}
 \newtheorem{cor}[teo]{Corolário}
 \newtheorem*{axiom}{Axioma}
