--- a/weierstrass.tex
+++ b/weierstrass.tex
@@ -2,36 +2,40 @@
 
 \section{Teorema da aproximação de Weierstrass}
 
-Desejamos mostrar que dada uma função contínua \( f : [a, b] \to \R \), podemos aproximá-la arbitrariamente bem por funções polinomiais \( p : [a, b] \to \R \).
+O primeiro teorema relacionado a aproximações de funções que estudaremos é o teorema da aproximação de Weierstrass, segundo o qual toda função contínua em um intervalo fechado pode ser bem proximada por um polinômio.
+Inicialmente provado por Weierstrass em 1885, novas demonstrações surgiram com o tempo.
+A que usamos de referência pode ser encontrada em \cite{weierstrass}.
 
-Em outras palavras, seja \( C( [a, b]) \) o espaço das funções contínuas em \( [a, b] \). Indicamos por \( \norm{ \varphi }_{ \infty } \) a norma do supremo de uma função limitada \( \varphi : [a, b] \to \R \), ou seja,
-\begin{equation}
+Escolhemos começar com esse resultado por sua demonstração ser elementar, não exigindo mais que um curso de análise na reta.
+Além disso, ele trata de aproximações em um contexto mais simples, envolvendo apenas uma variável, o que serve para acostumar o leitor ao tipo de questão que nos é de interesse.
+
+Como dito anteriormente, desejamos mostrar que dada uma função contínua \( f : [a, b] \to \R \), podemos aproximá-la arbitrariamente bem por funções polinomiais \( p : [a, b] \to \R \).
+
+Em outras palavras, seja \( C( [a, b]) \) o espaço vetorial das funções contínuas em \( [a, b] \). Indicamos por \( \norm{ \varphi }_{ \infty } \) a norma do supremo de uma função limitada \( \varphi : [a, b] \to \R \), ou seja, \[
     \norm{ \varphi }_{ \infty } = \sup \left\{ \abs{ \varphi(x) } \tq x \in [a, b] \right\}
-.\end{equation}
+.\]
 
 Então é verdade que
 
 \begin{teo}
     \label{thm: weierstrass}
-    Dada \( f \in C( [a, b] ) \), para todo \( \varepsilon > 0 \) existe um polinômio \( p : [a, b] \to \R \) tal que
-    \begin{equation}
+    Dada \( f \in C( [a, b] ) \), para todo \( \varepsilon > 0 \) existe um polinômio \( p : [a, b] \to \R \) tal que \[
         \norm{ f - p }_{ \infty } < \varepsilon
-    .\end{equation}
+    .\]
 \end{teo}
 
 Inicialmente, observamos que basta provar o teorema para o caso \( f \in C([0, 1]) \).
 De fato, dada \( f \in C([a, b]) \), considere o homeomorfismo \( \varphi : [0, 1] \to [a, b] \) dado por \( \varphi(x) = a + ( b - a )x \), cuja inversa é \( \varphi^{ -1 } : [a, b] \to [0, 1] \) dada por \( \varphi^{ -1 } (x) = \frac{ x - a }{ b - a } \).
-Então a função \( g = f \circ \varphi \) pertence a \( C([0, 1]) \) e, dado \( \varepsilon > 0 \), se existe um polinômio \( p(x) \) com \( \norm{ g - p }_{ \infty } < \varepsilon \), temos também, como \( \varphi^{ -1 } \) é um polinômio de grau \( 1 \),
-\begin{equation}
+Então a função \( g = f \circ \varphi \) pertence a \( C([0, 1]) \) e, dado \( \varepsilon > 0 \), se existe um polinômio \( p(x) \) com \( \norm{ g - p }_{ \infty } < \varepsilon \), temos também, como \( \varphi^{ -1 } \) é um polinômio de grau \( 1 \), \[
     \norm{ g \circ \varphi^{ -1 } - p \circ \varphi^{ -1 } }_{ \infty } < \varepsilon
-.\end{equation}
+.\]
 Como \( g \circ \varphi^{ -1 } = f \) e \( p \circ \varphi^{ -1 } \) é um polinômio, o resultado vale também para \( C([a, b]) \).
 
 Em seguida, devemos definir a classe de polinômios que utilizaremos na demonstração.
 
 \begin{defn}
     \label{def: bernstein}
-    Dada \( g : X \to \R \) definimos o \( n \)-ésimo polinômio de Bernstein de \( g \) como
+    Dada \( g : \R \to \R \) definimos o \( n \)-ésimo polinômio de Bernstein de \( g \) como
     \begin{equation}
         B_{ n }(x, g) \defeq
         \sum_{ k=0 }^{ n } g \left( \frac{ k }{ n } \right) \binom{n}{k} x^{ k } ( 1 - x )^{ n - k }
@@ -44,16 +48,14 @@ De fato, temos \( B_{ n } (x, 1) = ( 1 + ( 1 - x ) )^{ n } = 1 \).
 Mais geralmente, para toda constante \( c \in \R \) tem-se \( B_{ n } (x, c) = c \).
 
 Utilizaremos essa semelhança para obter algumas identidades essenciais para a demonstração do teorema \ref{thm: weierstrass}.
-Dados \( p \) e \( q \) reais, começamos considerando a expansão binomial de \( ( p + q )^{ n } \):
-\begin{equation}
+Dados \( p \) e \( q \) reais, começamos considerando a expansão binomial de \( ( p + q )^{ n } \): \[
     ( p + q )^{ n } =
     \sum_{ k=0 }^{ n } \binom{n}{k} p^{ k } q^{ n-k }
-.\end{equation}
-Considerando ambos lados da igualdade como funções de \( p \), podemos derivá-los com relação a essa variável, obtendo 
-\begin{equation}
+.\]
+Considerando ambos lados da igualdade como funções de \( p \), podemos derivá-los com relação a essa variável, obtendo \[
     n ( p + q )^{ n-1 } =
     \sum_{ k=0 }^{ n } k \binom{n}{k} p^{ k-1 } q^{ n-k }
-.\end{equation}
+.\]
 Multiplicando ambos lados por \( p/n \), ficamos com
     \begin{equation}
         p ( p + q )^{ n-1 } =
@@ -73,18 +75,15 @@ a segunda identidade que utilizaremos.
 Como consideramos \( f, g \in C([0, 1]) \), segue da Definição \ref{def: bernstein} que se \( f \geq 0 \), então \( B_{ n } (x, f) \geq 0 \) e, se \( f \leq g \), então \( B_{ n } (x, f) \leq B_{ n } (x, g) \).
 
 Com essas ferramentas, podemos então apresentar a
-%% Provar desigualdades envolvendo polinômios de Bernstein e explicar a restrição ao intervalo [0, 1]
  \begin{proof}[Demonstração do teorema \ref{thm: weierstrass}]
     Observamos inicialmente que como \( f \) é uma função contínua definida em um compacto, é uniformemente contínua.
-    Portanto, dado \( \varepsilon > 0 \), existe \( \delta > 0 \) tal que se \( x, y \in [0, 1] \) satisfazem \( \abs{ x - y } < \delta \) então
-    \begin{equation}
+    Portanto, dado \( \varepsilon > 0 \), existe \( \delta > 0 \) tal que, se \( x, y \in [0, 1] \) satisfazem \( \abs{ x - y } < \delta \), então \[
         \abs{ f(x) - f(y) } < \frac{ \varepsilon }{ 2 }
-    .\end{equation}
+    .\]
     Agora, definimos \( M \defeq \norm{ f }_{ \infty } \) e fixamos \( \xi \in [0, 1] \).
-    Logo, se \( \abs{ x - \xi } \geq \delta \) temos
-    \begin{equation}
+    Logo, se \( \abs{ x - \xi } \geq \delta \) temos \[
         \abs{ f(x) - f(\xi) } \leq 2M \leq 2M \left( \frac{ x - \xi }{ \delta } \right)^2
-    .\end{equation}
+    .\]
     Combinando as duas últimas desigualdades, concluímos que para todo \( x \in [0, 1] \) vale
     \begin{equation}
         \abs{ f(x) - f(\xi) } \leq 2M \left( \frac{ x - \xi }{ \delta } \right)^2 + \frac{ \varepsilon }{ 2 }
@@ -96,24 +95,22 @@ Com essas ferramentas, podemos então apresentar a
     Então
     \begin{align}
         \abs{ B_{ n } (x, f) - f(\xi) }
-        &= \abs{B_{ n } (x, f - f(\xi))} \\
-        &\leq  B_{ n } \left( x, 2M \left( \frac{ x - \xi }{ \delta } \right)^2 + \frac{ \varepsilon }{ 2 } \right) \\
-        &= \frac{ 2M }{ \delta^2 } B_{ n } (x, ( x - \xi )^2) + \frac{ \varepsilon }{ 2 } \\
-        &+ \frac{ 2M }{ \delta^2 } \left( B_{ n } (x, x^2) + B_{ n } (x, -2 x \xi) + \xi^2 \right) + \frac{ \varepsilon }{ 2 } \\
+        &= \abs{B_{ n } (x, f - f(\xi))} \notag \\
+        &\leq  B_{ n } \left( x, 2M \left( \frac{ x - \xi }{ \delta } \right)^2 + \frac{ \varepsilon }{ 2 } \right) \notag \\
+        &= \frac{ 2M }{ \delta^2 } B_{ n } (x, ( x - \xi )^2) + \frac{ \varepsilon }{ 2 } \notag \\
+        &+ \frac{ 2M }{ \delta^2 } \left( B_{ n } (x, x^2) + B_{ n } (x, -2 x \xi) + \xi^2 \right) + \frac{ \varepsilon }{ 2 } \notag \\
         &= \frac{ 2M }{ \delta^2 } \left( B_{ n } (x, x^2) - 2 \xi B_{ n } (x, x) + \xi^2 \right) + \frac{ \varepsilon }{ 2 }
         \label{al: elem_bernstein}
     .\end{align}
     Aqui fizemos uso das propriedades de \( B_{ n } (x, f) \) que seguem de \( x \in [0, 1] \), discutidas anteriormente.
-    Utilizando as equações (\ref{eq: id_1}) e (\ref{eq: id_2}), com a substituição \( p = x \) e \( q = 1 - x \), concluímos que
-    \begin{equation}
+    Utilizando as equações (\ref{eq: id_1}) e (\ref{eq: id_2}), com a substituição \( p = x \) e \( q = 1 - x \), concluímos que \[
         B_{ n } (x, x) = x
-    .\end{equation}
-    e que
-    \begin{equation}
+    .\]
+    e que \[
         B_{ n } (x, x^2) = x^2 \left( 1 - \frac{ 1 }{ n } \right) + \frac{ x }{ n }
-    .\end{equation}
+    .\]
     Substituindo em (\ref{al: elem_bernstein}), ficamos com
-    \begin{align}
+    \begin{align*}
         \frac{ 2M }{ \delta^2 } \left( B_{ n } (x, x^2) - 2 \xi B_{ n } (x, x) + \xi^2 \right) + \frac{ \varepsilon }{ 2 } &=
         \frac{ 2M }{ \delta^2 } \left( 
             x^2 \left( 1 - \frac{ 1 }{ n } \right) + \frac{ x }{ n }
@@ -124,29 +121,25 @@ Com essas ferramentas, podemos então apresentar a
              x^2 + \frac{ x - x^2 }{ n } - 2 \xi x + \xi^2
           \right) + \frac{ \varepsilon }{ 2 } \\
          &= \frac{ \varepsilon }{ 2 } + \frac{ 2M }{ n \delta^2 } ( x - x^2 ) + \frac{ 2M }{ \delta^2 } ( x - \xi )^2
-    .\end{align}
-    Sendo assim, 
-    \begin{equation}
+    .\end{align*}
+    Sendo assim, \[
         \abs{ B_{ n } (x, f) - f(\xi) } \leq \frac{ \varepsilon }{ 2 } + \frac{ 2M }{ n \delta^2 } ( x - x^2 ) + \frac{ 2M }{ \delta^2 } ( x - \xi )^2
-    .\end{equation}
+    .\]
     Como essa desigualdade vale para todo \( x \in [0, 1] \), em especial é válida para \( x = \xi \).
-    Fazendo essa substituição, obtemos
-    \begin{equation}
+    Fazendo essa substituição, obtemos \[
         \abs{ B_{ n } (\xi, f) - f(\xi) } \leq
         \frac{ \varepsilon }{ 2 } 
         + \frac{ 2M }{ n \delta^2 } ( \xi - \xi^2 )
-    .\end{equation}
+    .\]
     Facilmente podemos verificar que \( \xi - \xi^2 \leq \frac{ 1 }{ 4 } \) para todo \( \xi \in [0, 1] \).
-    Logo,
-    \begin{equation}
+    Logo, \[
         \abs{ B_{ n } (\xi, f) - f(\xi) } \leq
         \frac{ \varepsilon }{ 2 } 
         + \frac{ M }{ 2 n \delta^2 }
-    .\end{equation}
-    Por fim, tomando \( n > \frac{ M }{ \varepsilon \delta^2 } \), temos \( \frac{ M }{ 2 n \delta^2 } < \frac{ \varepsilon }{ 2 } \) e, assim,
-    \begin{equation}
+    .\]
+    Por fim, tomando \( n > \frac{ M }{ \varepsilon \delta^2 } \), temos \( \frac{ M }{ 2 n \delta^2 } < \frac{ \varepsilon }{ 2 } \) e, assim, \[
         \abs{ B_{ n } (\xi, f) - f(\xi) } < \varepsilon
-    .\end{equation}
+    .\]
     Como o valor de \( n \) obtido para que essa desigualdade seja satisfeita depende apenas de \( \varepsilon \) (lembramos que \( \delta \) depende apenas de \( \varepsilon \), pela continuidade uniforme de \( f \)), ela é válida para todo \( \xi \in [0, 1] \), ou seja, \[
         \norm{ B_{ n } (\cdot , f) - f }_{ \infty } < \varepsilon
     .\qedhere\]
