--- a/main.tex
+++ b/main.tex
@@ -30,18 +30,19 @@
 
 \newpage
 
-\input{weierstrass}
-\input{hilbert}
-\input{hahn-banach}
-\input{riesz}
-\input{aproximacao-universal}
+\input{introducao}
+%% \input{weierstrass}
+%% \input{hilbert}
+%% \input{hahn-banach}
+%% \input{riesz}
+%% \input{aproximacao-universal}
 
 \printbibliography
 
 \newpage
 
 \appendix
-\input{espacos-metricos}
-\input{analise-funcional}
+%% \input{espacos-metricos}
+%% \input{analise-funcional}
 
 \end{document}
