--- a/preamble.tex
+++ b/preamble.tex
@@ -1,7 +1,7 @@
 \theoremstyle{plain}% default
 \newtheorem{teo}{Teorema}[section]
 \newtheorem{lem}{Lema}[section]
-\newtheorem{prop}{Proposição}
+\newtheorem{prop}{Proposição}[section]
 \newtheorem{cor}[teo]{Corolário}
 \newtheorem*{axiom}{Axioma}
 
